// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Contacts > \`create\` > should invoke \`call\` 1`] = `
[
  [
    "crm.contact.add",
    {
      "fields": {
        "COMMENTS": "Some comment",
      },
      "params": {
        "REGISTER_SONET_EVENT": "Y",
      },
    },
  ],
]
`;

exports[`Contacts > \`create\` > should work without optional params 1`] = `
[
  [
    "crm.contact.add",
    {
      "fields": {
        "COMMENTS": "Some comment",
      },
      "params": undefined,
    },
  ],
]
`;

exports[`Contacts > \`get\` > should invoke \`call\` 1`] = `
[
  [
    "crm.contact.get",
    {
      "id": "77",
    },
  ],
]
`;

exports[`Contacts > \`list\` > should invoke \`list\` 1`] = `
[
  [
    "crm.contact.list",
    {
      "filter": {
        ">PROBABILITY": 50,
      },
      "order": {
        "COMMENTS": "ASC",
      },
      "select": [
        "*",
        "UF_*",
      ],
      "start": 0,
    },
  ],
]
`;

exports[`Contacts > \`list\` > should work without optional params 1`] = `
[
  [
    "crm.contact.list",
    {},
  ],
]
`;

exports[`Contacts > \`update\` > should invoke \`call\` 1`] = `
[
  [
    "crm.contact.update",
    {
      "fields": {
        "COMMENTS": "Some comment",
      },
      "id": "77",
      "params": {
        "REGISTER_SONET_EVENT": "Y",
      },
    },
  ],
]
`;

exports[`Contacts > \`update\` > should work without optional params 1`] = `
[
  [
    "crm.contact.update",
    {
      "fields": {
        "COMMENTS": "Some comment",
      },
      "id": "77",
      "params": undefined,
    },
  ],
]
`;

exports[`Contacts > should expose API methods 1`] = `
{
  "create": [Function],
  "fields": [Function],
  "get": [Function],
  "list": [Function],
  "update": [Function],
}
`;
